prod/vultr/10-corp-apps/2-dashy/dashy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: corp-apps
spec:
  selector:
    app: dashy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
