prod/vultr/10-corp-apps/2-dashy/dashy-ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware-basicauth
  namespace: corp-apps
spec:
  basicAuth:
    secret: traefik-basicauth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-tls
  namespace: corp-apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashy.kirbyware.io`) 
      kind: Rule
      middlewares:
        - name: traefik-middleware-basicauth
          namespace: corp-apps
      services:    
      - kind: Service
        name: dashy
        namespace: corp-apps
        port: 80
  tls:
    secretName: wildcard-kirbyware-io-production-tls
